Changing the horse image directory

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <img src="/horse.png" width="100px" style="display: inline-block;">
+    <img src="horse.png" width="100px" style="display: inline-block;">
     <div class="cc">
         Cheif Colt
     </div>
