--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zodiac Predictor</title>
-    <link rel="Stylesheet" href="styles.css">
-    <script src="/script.js" defer></script>
+    <link rel="Stylesheet" href="./styles.css">
+    <script src="./script.js" defer></script>
 
     
     
@@ -16,7 +16,7 @@
 
 <body>
 
-    <img src="/horse.png" width="100px" style="display: inline-block;">
+    <img src="./horse.png" width="100px" style="display: inline-block;">
     <div class="cc">
         Cheif Colt
     </div>
